Remove outdated payment test script, unit tests HTML, and validation HTML files to streamline the project structure and eliminate unused code.

--- a/complete-test-suite.html
+++ b/complete-test-suite.html
@@ -1797,6 +1797,14 @@
                 }
                 
                 const doc = iframe.contentDocument;
+                const criticalElements = [
+                    'menu-grid',
+                    'invoice-list',
+                    'order-items',
+                    'sidebar',
+                    'order-modal',
+                    'payment-modal',
+                    'end-shift-modal',
                     'admin-section'
                 ];
                 
