feat: Revamp UI/UX for BalanCoffee application
- Removed check-sync.js and missing-styles.css scripts for cleaner codebase.
- Updated index.html to enhance sidebar functionality and improve accessibility.
- Enhanced script.js with improved order handling and user notifications.
- Introduced a new notification system in styles.css for better user feedback.
- Redesigned menu item cards with modern CSS styles for improved visual appeal.
- Conducted thorough testing and validation of invoice and shift operations.
- Documented UI/UX fixes and improvements in FIX_REPORT_UI_ISSUES.md.

--- a/index.html
+++ b/index.html
@@ -139,15 +139,14 @@
                 </div>
             </section>
         </main>        <!-- Sidebar -->
-        <aside class="sidebar" id="sidebar" aria-label="Quản lý hóa đơn">
+        <aside class="sidebar collapsed" id="sidebar" aria-label="Quản lý hóa đơn">
             <!-- Mobile Backdrop -->
             <div class="sidebar-backdrop" onclick="toggleSidebar()" onkeydown="handleBackdropKeydown(event)" aria-hidden="true" tabindex="-1"></div>
             
             <div class="sidebar-content">
                 <div class="sidebar-header">
-                    <h3>Danh sách hóa đơn</h3>
-                    <button class="close-sidebar" onclick="toggleSidebar()" aria-label="Đóng danh sách hóa đơn" title="Đóng">
-                        <i class="fas fa-times" aria-hidden="true"></i>
+                    <h3>Danh sách hóa đơn</h3>                    <button class="close-sidebar" onclick="toggleSidebar()" aria-label="Đóng danh sách hóa đơn" title="Đóng">
+                        <i class="fas fa-chevron-left" aria-hidden="true"></i>
                     </button>
                 </div>
                 
