Add custom HTTP server with enhanced error handling and quick debug HTML page
- Implemented a custom HTTP server in `dev_server.py` to handle specific requests and improve error handling during development.
- Added support for serving `manifest.json` and `favicon.ico` with appropriate content types.
- Introduced a `quick_debug.html` page for easy debugging of the main application, featuring status checks and control buttons.
- Enhanced CSS styles for button and layout consistency in `styles.css`.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <h1>BalanCoffee</h1>
             </div>
             <nav class="header-actions" role="navigation" aria-label="Điều hướng chính">
-                <button class="btn btn-secondary" onclick="toggleAdmin()" aria-label="Chuyển đổi chế độ quản lý" title="Quản lý ca làm việc">
+                <button class="btn btn-secondary" onclick="toggleAdminMode()" aria-label="Chuyển đổi chế độ quản lý" title="Quản lý ca làm việc">
                     <i class="fas fa-chart-bar" aria-hidden="true"></i>
                     <span class="btn-text">Quản lý</span>
                 </button>
