feat: Remove system-test.html and complete syntax fixes across all modules
- Deleted system-test.html as part of codebase cleanup.
- Resolved all syntax warnings and errors in JavaScript files.
- Implemented safe error handling and modern JavaScript practices.
- Ensured all modules pass linting with zero warnings.

--- a/index.html
+++ b/index.html
@@ -476,9 +476,9 @@
     <script src="js/order-manager.js"></script>
     <script src="js/shift-manager.js"></script>
     <script src="js/modal-manager.js"></script>
-    
-    <!-- Legacy helpers -->
+      <!-- Legacy helpers -->
     <script src="debug-helper.js"></script>
+    <script src="dom-helper.js"></script>
     <script src="data.js"></script>
     <script src="mobile-helpers.js"></script>
     
